--- a/src/styles/stylesheet.css
+++ b/src/styles/stylesheet.css
@@ -1,196 +1,154 @@
-html {
- font-size: 10px;
- font-family: sans-serif;
-}
-p {
- font-size: 1.6rem;
- line-height: 1.5;
-}
-h1 {
- font-family: billabong, 'billabongregular';
- text-align: center;
- font-weight: 100;
- font-size: 13rem;
- margin: 2rem 0;
- letter-spacing: -1px;
- color: black;
- text-decoration: none;
-}
-h1 a {
- color: black;
- text-decoration: none;
-}
-h1 a:focus {
- outline: 0;
-}
-@font-face {
- font-family: 'billabongregular';
- src: url("https://cdn.rawgit.com/milktronics/beaglegr.am/master/public/fonts/billabong-webfont.eot");
- src: url("https://cdn.rawgit.com/milktronics/beaglegr.am/master/public/fonts/billabong-webfont.eot?#iefix") format('embedded-opentype'), url("https://cdn.rawgit.com/milktronics/beaglegr.am/master/public/fonts/billabong-webfont.woff") format('woff'), url("https://cdn.rawgit.com/milktronics/beaglegr.am/master/public/fonts/billabong-webfont.ttf") format('truetype'), url("https://cdn.rawgit.com/milktronics/beaglegr.am/master/public/fonts/billabong-webfont.svg#billabongregular") format('svg');
- font-weight: normal;
- font-style: normal;
-}
-body {
- background: offwhite;
-}
-.photoGrid {
- display: flex;
- flex-wrap: wrap;
- max-width: 1000px;
- margin: 0 auto;
-}
-.figure {
- flex-basis: calc(33.333% - 4rem);
- border: 1px solid #d3d3d3;
- padding: 2rem;
- flex-grow: 1;
- margin: 0 2rem 2rem 2rem;
-}
-.figure .single-photo {
- flex-basis: calc(33.333% - 4rem);
- flex-grow: 1;
- flex-shrink: 0;
- margin: 0 2rem 2rem 2rem;
- padding: 2rem;
- border: 1px solid #d3d3d3;
- background: #fff;
- position: relative;
-}
-.single-photo {
- max-width: 1000px;
- margin: 0 auto;
- display: flex;
- background: #fff;
- border: black;
-}
-.single-photo .figure {
- box-shadow: none;
- margin: 0 2rem 0 0;
- border: 0;
- padding: 0;
- flex: 1 0 60%;
- max-width: 60%;
-}
-.single-photo .comments {
- flex: 1 0 40%;
- max-width: 40%;
-}
-.single-photo .photo {
- width: 100%;
- margin: 0;
-}
-.photo {
- width: calc(100% + 4rem);
- margin-left: -2rem;
- margin-top: -2rem;
- max-width: none;
-}
-.comment{
- width: 100%
-}
-.comment p {
- border-bottom: 1px solid #d3d3d3;
- padding: 0.5rem 0;
-}
-.comment-form input,
-.comment-form textarea {
- width: 100%;
- border: 0;
- font-size: 1.3rem;
- padding: 1rem 0;
- border-bottom: 1px solid #d3d3d3;
- outline: none;
- resize: vertical;
-}
-.addIcon {
- background: url("https://image.flaticon.com/icons/svg/60/60740.svg") center no-repeat;
- background-size: contain;
- padding: 40px;
- display: table;
- margin: 20px auto;
- border: none;
-}
-.button-container {
- margin: 0 auto;
- display: flex;
- align-items: center;
- justify-content: center;
-}
-button, .button {
- border: 2px solid #f2f2f2;
- background: none;
- flex-basis: 48%;
- display: inline-block;
- line-height: 2;
- text-decoration: none;
- padding: 5px;
- text-align: center;
- font-size: 15px;
- color: red;
- transition: all 0.2s;
- box-sizing: padding-box;
+@import url('https://fonts.googleapis.com/css?family=Roboto:400,700&display=swap');
 
+html, body {
+    font-family: 'Roboto', sans-serif;
+    font-size: 14px;
+    margin: 0;
 }
-button:hover,.button:hover, button:focus, .button:focus {
- border-color: #00f;
- outline: 0;
+
+/*Elements*/
+p {
+    line-height: 1.4rem;
+    margin-bottom: .5rem;
 }
-.speech-bubble {
- background: url("https://d30y9cdsu7xlg0.cloudfront.net/png/51904-200.png") center no-repeat;
- background-size: contain;
- padding: 10px;
- margin: 5px;
- display: inline-block;
- border: none;
- position: relative;
+
+/*Header*/
+.site-header {
+    align-items: center;
+    background: #FFF;
+    display: flex;
+    height: 4rem;
+    justify-content: space-between;
+    left: 0;
+    overflow: hidden;
+    padding: 0 2rem;
+    position: sticky;
+    top: 0;
 }
-.comment-count {
- margin: 0 auto;
- display: flex;
- align-items: center;
- justify-content: center;
- color: black
+
+.site-header__nav {
+    background: lightblue;
+    height: 100%;
+    padding: 2rem;
+    position: fixed;
+    right: -50%;
+    top: 0;
+    transition: right .7s;
+    width: 50%;
+    box-sizing: border-box;
 }
+
+.site-header__nav--active {
+    right: 0;
+}
+
+.hamburger {
+    cursor: pointer;
+    height: 1rem;
+    position: relative;
+    width: 22px;
+}
+
+.hamburger__top,
+.hamburger__middle,
+.hamburger__bottom {
+     background: grey;
+     content: '';
+     display: block;
+     height: 1px;
+     position: absolute;
+     transform: rotate(0);
+     transition: all .25s;
+     width: 100%;
+ }
+
+.hamburger__middle {
+     right: 0;
+     top: 6px;
+ }
+
+.hamburger__bottom {
+     right: 0;
+     top: 12px;
+ }
+
+.hamburger--active .hamburger__top {
+    top: 6px;
+    transform: rotate(45deg);
+}
+
+.hamburger--active .hamburger__middle,
+.hamburger--active .hamburger__bottom {
+    top: 6px;
+    transform: rotate(-45deg);
+    width: 100%;
+}
+
+/*Body*/
+.container {
+    display: flex;
+    justify-content: center;
+}
+
+.page-content {
+    max-width: 1400px;
+    padding: 0 2rem;
+}
+
 .form {
- width: 360px;
- padding: 0 0 0;
- margin: auto;
+    margin: auto;
+    padding: 0 0 0;
+    width: 360px;
+}
+
+.box__dragndrop,
+.box__uploading,
+.box__success,
+.box__error {
+    display: none;
+}
+
+.box.has-advanced-upload {
+    background-color: white;
+    outline: 2px dashed black;
+    outline-offset: -10px;
+}
+.box.has-advanced-upload .box__dragndrop {
+    display: inline;
+}
+
+.form label {
+    line-height: 1.2rem;
 }
 
 .form input {
- font-family: sans-serif;
- outline: 0;
- background: #f2f2f2;
- width: 100%;
- border: 0;
- margin: 0 0 15px;
- padding: 15px;
- box-sizing: border-box;
- font-size: 14px;
- }
-.form button {
- font-family: "Roboto", sans-serif;
- text-transform: uppercase;
- outline: 0;
- background:#065784;
- width: 100%;
- border: 0;
- padding: 15px;
- color: #FFFFFF;
- font-size: 14px;
- -webkit-transition: all 0.3 ease;
- transition: all 0.3 ease;
- cursor: pointer;
- }
- .form button:hover,.form button:active,.form button:focus {
- background: #7B8589;
+    background: #f2f2f2;
+    border: 0;
+    box-sizing: border-box;
+    font-family: sans-serif;
+    font-size: 14px;
+    margin: 0 0 15px;
+    outline: 0;
+    padding: 15px;
+    width: 100%;
 }
-.loader {
- height: 20%;
- width: 100%;
- display: flex;
- position: fixed;
- align-items: center;
- justify-content: center;
- font-size: 28pt;
+
+.button, button {
+    background: #065784;
+    border: 0;
+    color: #FFFFFF;
+    cursor: pointer;
+    display: inline-block;
+    font-family: "Roboto", sans-serif;
+    font-size: 14px;
+    outline: 0;
+    padding: 1rem 2rem;
+    text-decoration: none;
+    text-transform: uppercase;
+    transition: all 0.3 ease;
+    width: auto;
+}
+
+.button:hover, button:hover, .button:active, button:active, .button:focus button:focus {
+    background: #7B8589;
 }
