--- a/src/styles/stylesheet.css
+++ b/src/styles/stylesheet.css
@@ -13,6 +13,7 @@
 /*#FF5630*/
 
 html, body {
+    background: #498CFA;
     font-family: 'Roboto', sans-serif;
     font-size: 14px;
     margin: 0;
@@ -27,10 +28,10 @@ p {
 /*Header*/
 .site-header {
     align-items: center;
-    background: #FFF;
+    background: transparent;
     display: flex;
     height: 4rem;
-    justify-content: space-between;
+    justify-content: flex-end;
     left: 0;
     overflow: hidden;
     padding: 0 2rem;
@@ -40,17 +41,18 @@ p {
 
 .site-header__nav {
     background: #0052CC;
+    box-sizing: border-box;
     height: 100%;
     padding: 2rem;
     position: fixed;
     right: -25%;
     top: 0;
-    transition: right .7s;
+    transition: right .7s, box-shadow .7s;
     width: 25%;
-    box-sizing: border-box;
 }
 
 .site-header__nav--active {
+    box-shadow: 0 0 15px 10px rgba(0, 0, 0, 0.1);
     right: 0;
 }
 
@@ -103,6 +105,7 @@ p {
 .container {
     display: flex;
     justify-content: center;
+    padding: 0;
 }
 
 .page-content {
@@ -112,9 +115,30 @@ p {
 }
 
 .form {
+    background: #FFF;
+    box-shadow: 0 0 15px 10px rgba(0, 0, 0, 0.4);
     margin: auto;
-    padding: 0 0 0;
+    padding: 2rem;
+    position: relative;
     width: 360px;
+}
+
+body:after{
+    background: #EE8E4A;
+    color: #fff;
+    content: "beta";
+    font-family: sans-serif;
+    font-size: 13px;
+    font-weight: bold;
+    height: 25px;
+    left: -20px;
+    line-height: 27px;
+    position: fixed;
+    text-align: center;
+    text-transform: uppercase;
+    top: 7px;
+    transform:rotate(-45deg);
+    width: 80px;
 }
 
 .box__dragndrop,
